syntax = "proto3";

package manager_setting;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "manager_setting.proto";


service Service {
  // GetSetting 获取当前系统的配置
  rpc GetSetting (google.protobuf.Empty) returns (GetSettingReply) {
    option (google.api.http) = {
      get: "/manager/v1/setting",
    };
  }
}